fixed TOC about buttons (i hope)

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 								<h1>About</h1>
 								<div style="display: inline-block; margins:auto; margin-bottom:25px; display: flex; justify-content: center;">
 
-									<input type="button" class="navmajor" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement">
-									<input type="button" class="navmajor" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do">
-									<input type="button" class="navmajor" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders">
+									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement" style="border:none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
+									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do" style="border:none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
+									<input type="button" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders" style="border:none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
 
 								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
