fix TOC buttons, realign job titles

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 								<h1>About</h1>
 								<div style="display: inline-block; margins:auto; margin-bottom:25px; display: flex; justify-content: center;">
 
-									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement" style="border:transparent; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
-									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do" style="border:transparent; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
-									<input type="button" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders" style="border:transparent; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
+									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement" style="border-top:none; border-left:none; border-right:none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
+									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do" style="border-top:none; border-left:none; border-right:none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
+									<input type="button" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders" style="border-top:none; border-left:none; border-right:none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
 
 								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
@@ -126,8 +126,8 @@
 								<hr>
 								<div id ="Daniel" style="display:inline-block">
 									<span class="image right"><img src="images/daniel.JPEG" alt="" /></span>
-									<h4 class="align-right">Lighting Designer</h4>
 									<h3>Daniel</h3>
+									<h4 class="align-right">Lighting Designer</h4>
 									<p>Insert bio</p>
 								</div>
 								<hr>
@@ -140,8 +140,8 @@
 								<hr>
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.JPEG" alt="" /></span>
-									<h4 class="align-right">Audio Technician | Web Developer | General Tech Nerd</h4>
 									<h3>Troy</h3>
+									<h4 class="align-right">Audio Technician | Web Developer | General Tech Nerd</h4>
 									<p>Hi, I’m Troy! I’m a high school student who loves working with tech, especially through my role on the ASB tech team. I really enjoy helping others, whether it’s setting up audio-visual equipment or finding solutions to tech problems. In my free time, you’ll usually find me gaming or nerding out over the latest gadgets.</p>
 								</div>
 							</article>
