--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<hr>
 								<div id ="Daniel" style="display:inline-block">
 									<span class="image right"><img src="images/daniel.JPEG" alt="" /></span>
-									<h3>Daniel</h3>
+									<h3 class="align-left" style="float:left;">Daniel</h3>
 									<h4 class="align-right" style="float:right;">Lighting Designer</h4>
 									<p>Insert bio</p>
 								</div>
@@ -134,14 +134,14 @@
 								<div id ="Russ" style="display:inline-block">
 									<span class="image left"><img src="images/russ.JPEG" alt="" /></span>
 									<h3>Russ</h3>
-									<h4 class="align-right" style="float:right;">Audio Technician | DJ | Communications</h4>
+									<h4 class="align-right">Audio Technician | DJ | Communications</h4>
 									<p>Insert bio</p>
 								</div>
 								<hr>
 								<div id ="Troy" style="display:inline-block">
 									<span class="image right"><img src="images/troy.JPEG" alt="" /></span>
 									<h3>Troy</h3>
-									<h4 class="align-right" style="float:right;">Audio Technician | Web Developer | General Tech Nerd</h4>
+									<h4 class="align-right">Audio Technician | Webmaster | Nerd</h4>
 									<p>Hi, I’m Troy! I’m a high school student who loves working with tech, especially through my role on the ASB tech team. I really enjoy helping others, whether it’s setting up audio-visual equipment or finding solutions to tech problems. In my free time, you’ll usually find me gaming or nerding out over the latest gadgets.</p>
 								</div>
 							</article>
