--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
 									<span class="image right"><img src="images/daniel.JPEG" alt="" /></span>
 									<h3 class="align-left" style="float:left;">Daniel</h3>
 									<h4 class="align-right" style="float:right;">Lighting Designer</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consectetur sodales ipsum, sit amet maximus lorem fermentum suscipit. Mauris venenatis metus nec neque bibendum, nec suscipit neque consectetur. Curabitur vel euismod elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc pretium lectus dolor, ut feugiat diam varius non. In hac habitasse platea dictumst. Nullam venenatis tellus eu sollicitudin pretium.</p>
+									<p style="position:relative;top:25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consectetur sodales ipsum, sit amet maximus lorem fermentum suscipit. Mauris venenatis metus nec neque bibendum, nec suscipit neque consectetur. Curabitur vel euismod elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc pretium lectus dolor, ut feugiat diam varius non. In hac habitasse platea dictumst. Nullam venenatis tellus eu sollicitudin pretium.</p>
 								</div>
 								<hr>
 								<div id ="Russ" style="display:inline-block">
 									<span class="image left"><img src="images/russ.JPEG" alt="" /></span>
 									<h3>Russ</h3>
-									<h4 class="align-right">Audio Technician | DJ</h4>
+									<h4 class="align-right" style="postion:relative;bottom:25px;">Audio Technician | DJ</h4>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consectetur sodales ipsum, sit amet maximus lorem fermentum suscipit. Mauris venenatis metus nec neque bibendum, nec suscipit neque consectetur. Curabitur vel euismod elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc pretium lectus dolor, ut feugiat diam varius non. In hac habitasse platea dictumst. Nullam venenatis tellus eu sollicitudin pretium.</p>
 								</div>
 								<hr>
