--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<!--SEO crap-->
 		<title>Aliso AV</title>
-		<link rel="icon" href="/path/to/favicon.ico">
+		<link rel="icon" href="images/favicon.ico">
 		<meta name="description" content="Aliso AV provides professional audio-visual productions for your next school or corporate event.">
 		
 		<meta charset="utf-8" />
