Added Russ’ Bio

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									<span class="image left"><img src="images/russ.JPEG" alt="" /></span>
 									<h3>Russ</h3>
 									<h4 class="align-right" style="margin-top:-38.5px;">Audio Technician | DJ</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consectetur sodales ipsum, sit amet maximus lorem fermentum suscipit. Mauris venenatis metus nec neque bibendum, nec suscipit neque consectetur. Curabitur vel euismod elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc pretium lectus dolor, ut feugiat diam varius non. In hac habitasse platea dictumst. Nullam venenatis tellus eu sollicitudin pretium.</p>
+									<p>I handle audio for Aliso AV, making sure voices are clear and soundscapes enhance every event. My goal is to create an experience where everyone feels connected, and I dedicate my work to God, using my skills to serve others. I hope each production is enjoyable and immersive for the audience.</p>
 								</div>
 								<hr>
 								<div id ="Troy" style="display:inline-block">
