--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<span class="image left"><img src="images/wyatt.jpg" alt="" /></span>
 									<h3>Wyatt</h3>
 									<h4 class="align-right" style="float:right;">Commisioner | Lighting Designer</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consectetur sodales ipsum, sit amet maximus lorem fermentum suscipit. Mauris venenatis metus nec neque bibendum, nec suscipit neque consectetur. Curabitur vel euismod elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc pretium lectus dolor, ut feugiat diam varius non. In hac habitasse platea dictumst. Nullam venenatis tellus eu sollicitudin pretium.</p>
+									<p>Hi, I’m Wyatt, the commissioner and lead lighting designer here. I specialize in creating lighting setups that enhance every event, and I’m always focused on making each design unique and memorable. Outside of work, I enjoy experimenting with new lighting techniques and pushing the creative boundaries of what we can do with tech.</p>
 								</div>
 								<hr>
 								<div id ="Daniel" style="display:inline-block">
