--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									<span class="image right"><img src="images/daniel.jpeg" alt="" /></span>
 									<h3 class="align-left">Daniel</h3>
 									<h4 class="align-right" style="float:right; padding-left:10px; margin-top:-37.5px;">Lighting Designer</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consectetur sodales ipsum, sit amet maximus lorem fermentum suscipit. Mauris venenatis metus nec neque bibendum, nec suscipit neque consectetur. Curabitur vel euismod elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc pretium lectus dolor, ut feugiat diam varius non. In hac habitasse platea dictumst. Nullam venenatis tellus eu sollicitudin pretium.</p>
+									<p>Hi, I’m Daniel, a lighting designer with a knack for lighting software and electronics repair. I love crafting immersive lighting experiences and keeping our tech in top shape. When I’m not working, you’ll probably find me backpacking, camping, or tinkering with electronic gadgets.</p>
 								</div>
 								<hr>
 								<div id ="Russ" style="display:inline-block">
