--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 									<h4 class="align-right" style="float:right;">Commisioner | Lighting Designer</h4>
 									<p></p>
 									<p></p>
-									<p>Hi, I’m Wyatt, the commissioner and lead lighting designer here. I specialize in creating lighting setups that enhance every event, and I’m always focused on making each design unique and memorable. Outside of work, I enjoy experimenting with new lighting techniques and pushing the creative boundaries of what we can do with tech.</p>
+									<p><br>Hi, I’m Wyatt, the commissioner and lead lighting designer here. I specialize in creating lighting setups that enhance every event, and I’m always focused on making each design unique and memorable. Outside of work, I enjoy experimenting with new lighting techniques and pushing the creative boundaries of what we can do with tech.</p>
 								</div>
 								<hr>
 								<div id ="Daniel" style="display:inline-block">
