--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<h1>Aliso AV</h1>
+								<span class="image main"><img src="images/logo-full.png" alt=""/></span>
+<!-- 								<h1>Aliso AV</h1> -->
 								<p>Audio Visual productions meant for <u><b>you</b></u>.</p>
 							</div>
 						</div>
