--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<span class="image main"><img src="images/logo-full.png" style="width:50%" alt="Aliso AV"/></span>
+								<span class="image main"><img src="images/logo-full.png" style="width:50%; justify:'center';" alt="Aliso AV"/></span>
 <!-- 								<h1>Aliso AV</h1> -->
 								<p>Audio Visual productions meant for <u><b>you</b></u>.</p>
 							</div>
