--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header">
 						<div class="content">
 							<div class="inner">
-								<span class="logo" style="margin-left:auto; margin-right:auto; width:22%; margin-top:-40px; margin-bottom:-25px;"><img src="images/logo-full.png" alt="Aliso AV"/></span>
+								<span class="logo"><img src="images/logo-full.png" alt="Aliso AV"/></span>
 <!-- 								<h1>Aliso AV</h1> -->
 								<p>Audio Visual productions meant for <u><b>you</b></u>.</p>
 							</div>
