--- a/index.html
+++ b/index.html
@@ -102,13 +102,7 @@
 						<!-- About -->
 							<article id="about">
 								<h1>About</h1>
-								<div style="display: inline-block; margins:auto; margin-bottom:25px; display: flex; justify-content: center;">
 
-									<input type="button" onClick="document.getElementById('mission').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Mission Statement" style="border-top:none; border-left:none; border-right:none; outline: none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
-									<input type="button" onClick="document.getElementById('wwd2').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="What We Do" style="border-top:none; border-left:none; border-right:none; outline: none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
-									<input type="button" onClick="document.getElementById('founders').scrollIntoView({ behavior: 'smooth', block: 'start', inline: 'nearest' });" value="Founders" style="border-top:none; border-left:none; border-right:none; outline: none; border-bottom: solid 1px #ffffff; padding-bottom: 0.5rem; margin: 0 0 2rem 0;">
-
-								</div>
 								<h2 class="major" id="mission">Mission Statement</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Our mission is to deliver high-quality event experiences regardless of financial means. We are committed to providing reasonable cost options, ensuring that everyone can participate in and enjoy the excellence we offer. Through innovation, we aim to maintain the highest standards in our productions.</p>
@@ -121,7 +115,7 @@
 								<div id ="Wyatt" style="display:inline-block">
 									<span class="image left"><img src="images/wyatt.jpg" alt="" /></span>
 									<h3>Wyatt</h3>
-									<h4 class="align-right" style="float:right;">Commisioner | Lighting Designer</h4>
+									<h4 class="align-right" style="float:right;">ASB Vice President</h4>
 									<p><br><br>Hi, I’m Wyatt, the commissioner and lead lighting designer here. I specialize in creating lighting setups that enhance every event, and I’m always focused on making each design unique and memorable. Outside of work, I enjoy experimenting with new lighting techniques and pushing the creative boundaries of what we can do with tech.</p>
 								</div>
 								<hr>
@@ -135,7 +129,7 @@
 								<div id ="Russ" style="display:inline-block">
 									<span class="image left"><img src="images/russ.JPEG" alt="" /></span>
 									<h3>Russ</h3>
-									<h4 class="align-right" style="margin-top:-38.5px;">Audio Technician | DJ</h4>
+									<h4 class="align-right" style="margin-top:-38.5px;">Tech Commisioner | DJ</h4>
 									<p>I handle audio for Aliso AV, making sure voices are clear and soundscapes enhance every event. My goal is to create an experience where everyone feels connected, and I dedicate my work to God, using my skills to serve others. I hope each production is enjoyable and immersive for the audience.</p>
 								</div>
 								<hr>
@@ -144,6 +138,18 @@
 									<h3>Troy</h3>
 									<h4 class="align-right">Audio Technician | Webmaster | Nerd</h4>
 									<p>Hi, I’m Troy! I’m a high school student who loves working with tech, especially through my role on the ASB tech team. I really enjoy helping others, whether it’s setting up audio-visual equipment or finding solutions to tech problems. In my free time, you’ll usually find me gaming or nerding out over the latest gadgets.</p>
+								</div>
+								<div id ="Jordan" style="display:inline-block">
+									<span class="image left"><img src="images/troy.JPEG" alt="" /></span>
+									<h3>Jordan</h3>
+									<h4 class="align-right">Trainee</h4>
+									<p></p>
+								</div>
+								<div id ="Elliot" style="display:inline-block">
+									<span class="image right"><img src="images/troy.JPEG" alt="" /></span>
+									<h3>Elliot</h3>
+									<h4 class="align-right">Trainee</h4>
+									<p></p>
 								</div>
 							</article>
 						<!-- What We Do -->
