--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 									<div class="mySlides1 fade">
 										<img src="images/audio_ss/k12-2.jpg" style="width:100%">
 								  	</div>
+									<div class="mySlides1 fade">
+										<img src="images/audio_ss/knobs.JPG" style="width:100%">
+								  	</div>
 								</div>
 
 							</article>
