Changed JPG to jpg referencing knobs169.jpg

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<img src="images/audio_ss/k12-2.jpg" style="width:100%">
 								  	</div>
 									<div class="mySlides1 fade">
-										<img src="images/audio_ss/knobs169.JPG" style="width:100%">
+										<img src="images/audio_ss/knobs169.jpg" style="width:100%">
 								  	</div>
 								</div>
 
